<resources>
    <string name="app_name">DNA Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Beranda</string>
    <string name="title_detail_biro_jasa">STNK</string>
    <string name="title_ekspedisi">Ekspedisi</string>
    <string name="title_help">Bantuan</string>
    <string name="message_no_data">No Data</string>
    <string name="stnk_tahunan">STNK Tahunan</string>
    <string name="stnk_tahunan_desc">Layanan untuk perpanjang STNK tahunan</string>
    <string name="stnk_5_tahunan">STNK 5 Tahunan</string>
    <string name="stnk_5_tahunan_desc">Layanan untuk perpanjang STNK 5 Tahunan</string>
    <string name="stnk_hilang">STNK Hilang</string>
    <string name="stnk_hilang_desc">Layanan untuk penerbitan STNK Hilang</string>
    <string name="mutasi">Mutasi</string>
    <string name="mutasi_desc">Layanan untuk mutasi kendaraan bermotor</string>
    <string name="balik_nama">Balik Nama</string>
    <string name="layanan_untuk_balik_nama_kendaraan_bermotor">Layanan untuk balik nama kendaraan bermotor</string>
    <string name="eskpedisi_desc">Layanan pengiriman motor beserta aksesoris dan spare part</string>
    <string name="ekpedisi">Ekpedisi</string>
    <string name="hint_input_name">Masukkan Nama Anda</string>
    <string name="hint_input_no_ktp">Masukkan Nomor KTP/NIK Anda</string>
    <string name="hint_input_phone_number">Masukkan Nomor Handphone Anda</string>
    <string name="hint_input_address">Masukkan alamat anda</string>
    <string name="centang_perlengkapan_attention">Centang sesuai perlengakapan dokumen yang anda miliki</string>
    <string name="bpkb_asli">BPKB Asli</string>
    <string name="ktp_asli">KTP Asli</string>
    <string name="stnk_asli">STNK Asli</string>
    <string name="submit">Submit</string>
    <string name="take_pict_ktp">Ambil Foto KTP</string>
    <string name="cek_fisik_kendaraan">Cek Fisik</string>
    <string name="hint_input_no_polisi">Nomor polisi (ex: B 1234 TXA)</string>
    <string name="label_loading">Sedang memuat data</string>
    <string name="galeri">Galeri</string>
    <string name="upload_ktp_dari_galeri">Upload KTP dari Galeri</string>
    <string name="camera">Kamera</string>
    <string name="kwitansi_dengan_materai">Kwitansi dengan materai</string>
    <string name="desc_ekspedisi_sparepart">Kami menyediakan layanan pengiriman aksesoris ataupun sparepart motor Anda</string>
    <string name="hint_nama_pengirim">Nama pengirim</string>
    <string name="phone_hint">08123xxxxxxx</string>
    <string name="address_hint">Jln Haji Soebrantas, Tampan, Pekanbaru</string>
    <string name="order">Pesan</string>
    <string name="yamaha_xabre">Yamaha Xabre</string>
    <string name="hint_nama_penerima">Nama Penerima</string>
    <string name="help_description">Kami disini untuk membantu Anda menggunakan aplikasi DNA Motor dengan lebih baik. Kami aktif setiap Senin - Jumat, pukul 09.30 - 17.30</string>
    <string name="desc_ekspedisi_motor">Kami siap mengirimkan motor anda hingga sampai tujuan dengan aman, nyaman dengan harga terjangkau</string>
    <string name="title_ekspedisi_motor">Ekspedisi Motor</string>
    <string name="title_ekspedisi_aksesoris_sparepart">Ekspedisi Aksesoris/Sparepart Motor</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="desc_ekspedisi">Selamat datang di jasa ekspedisi kami, disini kami melayani pengiriman motor beserta sparepart/aksesrosis motor Anda, silahkan cek perkiraan harga dari kami, dan lajutkan untuk pemesanan</string>
</resources>