<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="24dp"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    android:orientation="vertical"
    tools:context=".view.stnk.FormStnkHilangFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fillViewport="true"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_name"
                android:textAllCaps="false"
                android:hint="@string/hint_input_name"
                android:layout_marginBottom="8dp"
                android:textSize="18sp"
                android:backgroundTint="@color/dark_navy"
                android:background="@drawable/bg_edittext"
                android:paddingHorizontal="16dp"
                android:paddingVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edt_no_ktp"
                android:inputType="number"
                android:textSize="18sp"
                android:hint="@string/hint_input_no_ktp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/dark_navy"
                android:background="@drawable/bg_edittext"
                android:paddingHorizontal="16dp"
                android:paddingVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edt_no_polisi"
                android:inputType="text"
                android:textSize="18sp"
                android:backgroundTint="@color/dark_navy"
                android:background="@drawable/bg_edittext"
                android:paddingHorizontal="16dp"
                android:paddingVertical="10dp"
                android:hint="@string/hint_input_no_polisi"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edt_phone"
                android:hint="@string/hint_input_phone_number"
                android:layout_marginBottom="8dp"
                android:textSize="18sp"
                android:inputType="phone"
                android:backgroundTint="@color/dark_navy"
                android:background="@drawable/bg_edittext"
                android:paddingHorizontal="16dp"
                android:paddingVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edt_address"
                android:inputType="text"
                android:textSize="18sp"
                android:hint="@string/hint_input_address"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/dark_navy"
                android:background="@drawable/bg_edittext"
                android:paddingHorizontal="16dp"
                android:paddingVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/centang_perlengkapan_attention"
                android:textStyle="italic"
                android:layout_marginTop="8dp"
                android:textColor="@color/dark_navy"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">

                <CheckBox
                    android:id="@+id/cbo_bpkb"
                    android:text="@string/bpkb_asli"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/cbo_ktp"
                    android:text="@string/ktp_asli"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/cbo_stnk_asli"
                    android:text="@string/stnk_asli"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </LinearLayout>

            <TextView
                android:text="Upload KTP Anda"
                android:textStyle="italic"
                android:textSize="14sp"
                android:textColor="@color/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_take_ktp_from_camera"
                    android:text="@string/camera"
                    android:layout_weight="1"
                    android:layout_marginRight="16dp"
                    android:textAllCaps="false"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/btn_take_ktp_from_galerry"
                    android:text="@string/galeri"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"/>


            </LinearLayout>


            <ImageView
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:id="@+id/img_take_pict_ktp"
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="150dp"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_submit"
        android:layout_marginBottom="64dp"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/bg_button"
        android:backgroundTint="@color/bg_button_state"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>